--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: social-gamification-client
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./database/social-gamification;DB_CLOSE_ON_EXIT=FALSE;
