--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: social-gamification-client
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./database/social-gamification;DB_CLOSE_ON_EXIT=FALSE;
+    url: jdbc:h2:file:./database/social-gamification;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
     username: sa
     password:
   jpa:
@@ -17,6 +17,19 @@ spring:
 
 server:
   port: 8081
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info, health, httptrace, loggers, metrics
 
 # REST client settings
 multiplicationHost: http://localhost:8000/api
