--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-amqp"
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-hystrix:1.4.7.RELEASE'
 
 	runtimeOnly 'com.h2database:h2'
 
